Item1769: Uncommitted translations in the last 4 hours
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5002 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/de.po
+++ b/core/locale/de.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-06-19 00:24+0200\n"
+"PO-Revision-Date: 2009-09-19 17:59+0200\n"
 "Last-Translator: André Ulrich <andre.ulrich@kontextwork.de>\n"
 "Language-Team: Foswiki German Translation Team <none>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 1.2.1\n"
 
@@ -113,6 +113,8 @@ msgstr "%1 wurde mit der E-Mail %2 registriert"
 #: core/templates/validate.tmpl:16
 msgid "%1 has received a suspicious change request from your browser."
 msgstr ""
+"%1 hat eine als verdächtig eingestufte Änderungsanfrage von Ihrem Browser "
+"erhalten."
 
 #: core/templates/messages.tmpl:23
 msgid "%1 home"
@@ -1469,7 +1471,7 @@ msgstr ""
 
 #: core/data/System/WebSearch.txt:5 core/data/System/WebSearchAdvanced.txt:5
 msgid "Get notified on changes on this search"
-msgstr "Bei Änderungen bezüglicher dieser Suche benachrichtigt werden"
+msgstr "Bei Änderungen bezüglich dieser Suche benachrichtigt werden"
 
 #: core/templates/foswiki.tmpl:82
 msgid "Go back"
@@ -1597,7 +1599,7 @@ msgstr ""
 
 #: core/templates/validate.tmpl:25
 msgid "If you are unsure what this means, read:"
-msgstr ""
+msgstr "Bei Unklarheiten können Sie hier mehr erfahren: "
 
 #: core/templates/messages.tmpl:495
 msgid "If you came here by clicking on a question mark link"
@@ -1815,7 +1817,7 @@ msgstr "Verweis"
 
 #: core/data/System/WebSearch.txt:45 core/data/System/WebSearchAdvanced.txt:98
 msgid "List all topics in the %1 web in alphabetical order"
-msgstr "Auflistung aller Topics in dem %1 Web in alphabetischer Reihenfolge"
+msgstr "Auflistung aller Topics im %1 Web in alphabetischer Reihenfolge"
 
 #: core/data/System/WebSearch.txt:46 core/data/System/WebSearchAdvanced.txt:99
 msgid "List topics that start with the letter:"
@@ -2207,11 +2209,11 @@ msgstr "Einstellungen für"
 
 #: core/templates/validate.tmpl:23
 msgid "Press Cancel otherwise."
-msgstr ""
+msgstr "Wählen Sie ansonsten Abbrechen."
 
 #: core/templates/validate.tmpl:22
 msgid "Press OK to confirm that this change was intentional."
-msgstr ""
+msgstr "Bitte bestätigen Sie mit OK, wenn diese Änderung beabsichtigt ist."
 
 #: core/lib/Foswiki/OopsException.pm:42
 msgid "Problem filling bath"
@@ -2296,7 +2298,7 @@ msgstr "Der Registrierungs Code kann nur einmal verwendet werden."
 
 #: core/data/System/WebSearchAdvanced.txt:61
 msgid "Regular expression search"
-msgstr "Mit regulären Ausdrücke suchen"
+msgstr "Mit regulären Ausdrücken suchen"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:81
 msgid "Related Topics"
@@ -2921,6 +2923,8 @@ msgid ""
 "There is a risk that someone may be trying to use your identity to change "
 "content on %1 without your knowledge."
 msgstr ""
+"Es besteht ein Risiko, dass jemand versucht, unter Ihrer Identität und ohne "
+"Ihr Wissen Inhalte von %1 zu ändern."
 
 #: core/templates/messages.tmpl:343
 msgid "There should be a line that includes %1, look for %2 (or %3)"
@@ -3303,7 +3307,7 @@ msgstr "Warnung"
 
 #: core/templates/validate.tmpl:8
 msgid "Warning! Confirmation required"
-msgstr "Verdächtige Anfrage vom Browser"
+msgstr "Achtung! Bestätigung erforderlich"
 
 #: EditTablePlugin/data/System/EditTablePlugin.txt:166
 msgid "Warning: 'include' topic does not exist!"
@@ -3891,7 +3895,7 @@ msgstr "Ansehen"
 
 #: core/templates/validate.tmpl:27
 msgid "why you are being asked to confirm"
-msgstr ""
+msgstr "warum Sie zur Bestätigung aufgefordert werden"
 
 #: TopicUserMappingContrib/data/System/ResetPassword.txt:22
 msgid ""
