--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,3 +1,9 @@
+foswiki (1.0.7-1) stable; urgency=high
+
+  * update to foswiki 1.0.7
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Sun, 4 Oct 2009 09:53:40 +0100
+
 foswiki (1.0.6-3) unstable; urgency=high
 
   * fix bad URL generation when logging on from / and using ShorterUrls Item1766
