Item2106: move cgi-bin dir to /var/lib/foswiki so that the layout is what foswiki users expect, and so that using configure, or unziping extensions does not break your foswiki install
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5213 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -3,6 +3,7 @@ foswiki (1.0.7-1) stable; urgency=high
   * update to foswiki 1.0.7
   * remove mod_perl bits - they're now in foswiki-modperlenginecontrib
   * add localhost and 127.0.0.1 to permitted redirecthosts by default
+  * remove foswiki cgi's from cgi-bin to bring it more into line with foswiki
 
  -- Sven Dowideit <SvenDowideit@fosiki.com>  Sun, 4 Oct 2009 09:53:40 +0100
 
