Item2219: No longer cp the cgi-bin dir around - included in the .deb
Update changelog to generate new release .deb

git-svn-id: http://svn.foswiki.org/branches/Release01x00@5229 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,3 +1,9 @@
+foswiki (1.0.7-2) unstable; urgency=high
+
+  * Remove cp of the cgi-bin dir, just package files now - Item2219
+
+ -- Drake Diedrich <dld@google.com>  Wed, 07 Oct 2009 13:22:35 -0700
+
 foswiki (1.0.7-1) stable; urgency=high
 
   * update to foswiki 1.0.7
