--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,3 +1,25 @@
+foswiki (1.0.7-3) unstable; urgency=high
+
+  * fis up the legacy redirect from /cgi-bin/foswiki
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Thu, 08 Oct 2009 13:22:35 -0700
+
+foswiki (1.0.7-2) unstable; urgency=high
+
+  * Remove cp of the cgi-bin dir, just package files now - Item2219
+  * I can't sign a package for Drake :/ so I've changed the line below
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Wed, 07 Oct 2009 13:22:35 -0700
+
+foswiki (1.0.7-1) stable; urgency=high
+
+  * update to foswiki 1.0.7
+  * remove mod_perl bits - they're now in foswiki-modperlenginecontrib
+  * add localhost and 127.0.0.1 to permitted redirecthosts by default
+  * remove foswiki cgi's from cgi-bin to bring it more into line with foswiki
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Sun, 4 Oct 2009 09:53:40 +0100
+
 foswiki (1.0.6-3) unstable; urgency=high
 
   * fix bad URL generation when logging on from / and using ShorterUrls Item1766
