--- a/core/locale/ja.po
+++ b/core/locale/ja.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-07-03 15:41+0200\n"
+"PO-Revision-Date: 2009-10-18 13:10+0200\n"
 "Last-Translator: Joel DeJesus <dejesus.joel@gmail.com>\n"
 "Language-Team: Foswiki Japanese team\n"
 "Language: ja\n"
@@ -1028,7 +1028,7 @@ msgstr "テンプレートが見つかりませんでした"
 
 #: core/templates/messages.tmpl:472
 msgid "Could not perform search. Error was: %1"
-msgstr ""
+msgstr "検索の途中でエラーが発生しました。"
 
 #: core/templates/messages.tmpl:323
 msgid "Could not save %1."
