--- a/core/locale/nl.po
+++ b/core/locale/nl.po
@@ -514,7 +514,7 @@ msgstr ""
 #. ($data->{Email})
 #: core/lib/Foswiki/UI/Register.pm:974
 msgid "A confirmation e-mail has been sent to %1"
-msgstr "Een bevestigingse-mail is verstuurd naar %1"
+msgstr "Een bevestigings e-mail is verstuurd naar %1"
 
 #: core/templates/messages.tmpl:497
 msgid ""
@@ -2441,7 +2441,7 @@ msgstr "Bewaren"
 #: core/templates/registerfailedremoved.tmpl:21
 #: core/templates/registernotifyadmin.tmpl:16
 msgid "Saved to:"
-msgstr "Bewaard in:"
+msgstr "Opgeslagen in:"
 
 #: PatternSkin/data/Main/WebLeftBarExample.txt:7
 #: PatternSkin/data/Sandbox/WebLeftBarExample.txt:7
@@ -2964,7 +2964,7 @@ msgstr "Dit is een geautomatiseerde e-mail van %1."
 #: core/templates/registernotifyadmin.tmpl:8
 msgid "This is an automated e-mail notification of user registration in %1."
 msgstr ""
-"Dit is een geautomatiseerde e-mailberichtgeving van gebruikersregistratie in "
+"Dit is een geautomatiseerd bericht van de registratie van een gebruiker in "
 "%1."
 
 #: core/data/Trash/WebHome.txt:2
@@ -3315,7 +3315,7 @@ msgstr "Waarschuwing: Kan pagina %1.%2 niet vinden"
 
 #: core/lib/Foswiki/UI/Register.pm:967
 msgid "Warning: Could not send confirmation email"
-msgstr "Waarschuwing: kon geen bevestigingse-mail versturen"
+msgstr "Waarschuwing: kon geen bevestigings e-mail versturen"
 
 #: core/lib/Foswiki/UI/Register.pm:979
 msgid "Warning: Could not send confirmation email, email has been disabled"
