Item2446: fixed german backlinks translation
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5807 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/de.po
+++ b/core/locale/de.po
@@ -3838,7 +3838,7 @@ msgid ""
 "accesskey='b'>&Backlinks"
 msgstr ""
 "title='Das %1 Web nach Topics durchsuchen, die hierher verweisen' "
-"accesskey='b'>We&b"
+"accesskey='b'>Querverweise (&b)"
 
 #: core/templates/viewtopicactionbuttons.tmpl:26
 msgid ""
