--- a/core/working/registration_approvals/README
+++ b/core/working/registration_approvals/README
@@ -1,4 +1,4 @@
-This is where TWiki store registration approvals that are waiting for
+This is where Foswiki stores registration approvals that are waiting for
 verification. This directory should *not* be browseable from the web,
 and should *not* be accessible to anyone on the server except the
 webserver user.
