Item2444: More forgotten brands in README files
git-svn-id: http://svn.foswiki.org/trunk@5878 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/working/work_areas/README
+++ b/core/working/work_areas/README
@@ -1,3 +1,3 @@
-This is where TWiki stores the work areas for plugins. This directory
+This is where Foswiki stores the work areas for plugins. This directory
 should *not* be browseable from the web, and should *not* be accessible
 to anyone on the server except the webserver user.
