Item8023: automate generation of debian/* build files from MANIFESTs.
git-svn-id: http://svn.foswiki.org/trunk@6019 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,3 +1,11 @@
+foswiki (1.1.0~prerelease) unstable; urgency=high
+
+  * Begin packaging splitup, to better support replacement of data, tools,
+  * and more general configuration options.  Initial new packages will be
+  * empty.
+
+ -- Drake Diedrich <dld@google.com>  Wed, 06 Jan 2010 13:11:00 +0800
+
 foswiki (1.0.7-3) unstable; urgency=high
 
   * fis up the legacy redirect from /cgi-bin/foswiki
