Item2644: fixing typo in pt-br translation
git-svn-id: http://svn.foswiki.org/branches/Release01x00@6048 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/pt-br.po
+++ b/core/locale/pt-br.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: pt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-06-21 00:09+0200\n"
+"PO-Revision-Date: 2010-01-15 17:17-0300\n"
 "Last-Translator: Carlinhos Ceconi <carlinux@terra.com.br>\n"
 "Language-Team: Foswiki Brasil <foswiki-br@listas.softwarelivre.org>\n"
 "MIME-Version: 1.0\n"
@@ -2902,7 +2902,7 @@ msgid ""
 "content on %1 without your knowledge."
 msgstr ""
 "Existe um risco de que alguém talvez estaja usando sua identidade para "
-"editar o conteúdo em 1% sem o seu conhecimento."
+"editar o conteúdo em %1 sem o seu conhecimento."
 
 #: core/templates/messages.tmpl:343
 msgid "There should be a line that includes %1, look for %2 (or %3)"
