Item2655: foswiki 1.0.9 debian package update
git-svn-id: http://svn.foswiki.org/branches/Release01x00@6080 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,6 +1,13 @@
+foswiki (1.0.9-1) unstable; urgency=high
+
+  * upgrade to 1.0.9
+  * tighten up the too greedy ShorterUrls rewrite match
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Mon, 18 Jan 2010 13:22:35 -0700
+
 foswiki (1.0.7-3) unstable; urgency=high
 
-  * fis up the legacy redirect from /cgi-bin/foswiki
+  * fix up the legacy redirect from /cgi-bin/foswiki
 
  -- Sven Dowideit <SvenDowideit@fosiki.com>  Thu, 08 Oct 2009 13:22:35 -0700
 
