Item2653: Add myself to the AUTHORS file
git-svn-id: http://svn.foswiki.org/branches/Release01x00@6130 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/AUTHORS
+++ b/core/AUTHORS
@@ -36,6 +36,7 @@ The following people are identified as authors of Foswiki:
 | Michael Daum         | Foswiki:Main.MichaelDaum       | Germany     |
 | Michael Tempest      | Foswiki:Main.MichaelTempest    | South Africa|
 | Olivier Raginel      | Foswiki:Main.OlivierRaginel    | France      |
+| Paul Harvey          | Foswiki:Main.PaulHarvey        | Australia   |
 | Raul F Rodriguez     | Foswiki:Main.RaulFRodriguez    | France      |
 | Rob Manson           | Foswiki:Main.RobManson         | Australia   |
 | Sean McCarthy        | Foswiki:Main.SeanMcCarthy      | Australia   |
