--- a/core/locale/tr.po
+++ b/core/locale/tr.po
@@ -1,17 +1,18 @@
-# Foswiki translation for <Language>
+# Foswiki translation for Turkish (Türkçe)
 # Translators:
 #   <add-yourself-here>
 msgid ""
 msgstr ""
-"Project-Id-Version: Foswiki $Id\n"
+"Project-Id-Version: tr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: tr\n"
 
 #. ($days)
 #: core/lib/Foswiki/Time.pm:450
@@ -3284,7 +3285,7 @@ msgstr ""
 
 #: core/lib/Foswiki/I18N.pm:313
 msgid "_language_name"
-msgstr ""
+msgstr "Türkçe"
 
 #: core/lib/Foswiki/Access.pm:207
 msgid "access denied on root"
